--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body class="light-mode">
     <!-- Header Component -->
     <div id="header-component"></div>
-
+    <!-- Header Component -->
     <!-- Hero Section -->
     <section class="hero-section">
         <div class="hero-overlay"></div>
